--- a/css/style.css
+++ b/css/style.css
@@ -2,100 +2,112 @@
 @import url('https://fonts.googleapis.com/css?family=Anton|Gugi|Lato|Roboto|Sofia&display=swap');
 
 :root {
-    --light-gray:#808080;
-    --primary-color:blue;
-    --border: #808080;
-    --text-color:#ff686b;
-    --roboto:"Roboto",sans-serif;
-    --gugi:"Gugi",cursive;
-    --sofia:"Sofia",cursive;
+  --light-gray: #808080;
+  --primary-color: blue;
+  --border: #808080;
+  --text-color: #ff686b;
+  --roboto: "Roboto",sans-serif;
+  --gugi: "Gugi",cursive;
+  --sofia: "Sofia",cursive;
 }
 
 .primary-color {
-    color:var(--primary-color);
-} 
-
-.bg-primary-color{
-    background-color:var(--primary-color)!important;
+  color: var(--primary-color);
 }
 
-.text-color{
-    color:var(--text-color);
+.bg-primary-color {
+  background-color: var(--primary-color)!important;
 }
 
-.font-roboto{
-    font-family:var(--roboto);
+.text-color {
+  color: var(--text-color);
 }
 
-.lightblue{
-    color:lightblue;
+.font-roboto {
+  font-family: var(--roboto);
+}
+
+.lightblue {
+  color: lightblue;
 }
 
 /*header section*/
 
-header{
-    background-color:var(--primary-color)
+header {
+  background-color: var(--primary-color)
     font-family:var(--roboto);
-    
 }
 
 header .site-title {
-    font-family:var(--gugi);
-    
+  font-family: var(--gugi);
 }
 
 .container.dropdown-toggle,
- .container.dropdown-item{
-    font-size:0.7em;
+ .container.dropdown-item {
+  font-size: 0.7em;
+}
 
-}  
-
-.header-links a{
-    font-size:0.9em;
-    text-decoration:none;
-    color:white;
+.header-links a {
+  font-size: 0.9em;
+  text-decoration: none;
+  color: white;
 }
 
 /*Navigation Menu*/
 
-.navbar-nav{
-    padding:0.8em 0em;
+.navbar-nav {
+  padding: 0.8em 0em;
 }
 
-.navbar-nav .nav-link{
-    font-size:0.9;
-    color:var(--light-gray)!important;
+.navbar-nav .nav-link {
+  font-size: 0.9;
+  color: var(--light-gray)!important;
 }
 
-.navbar-nav .nav-item .nav-link{
-    padding:0 1.3em;
+.navbar-nav .nav-item .nav-link {
+  padding: 0 1.3em;
 }
 
-.navbar-nav .basket-icon{
-    margin-right:6.5rem !important;
+.navbar-nav .basket-icon {
+  margin-right: 6.5rem !important;
 }
 
 /*slider one*/
 
-.site-slider{
-    position: relative;
+.site-slider {
+  position: relative;
 }
 
-.position-top{
- position:absolute; 
- top:50%;  
+.position-top {
+  position: absolute;
+  top: 50%;
 }
 
 .site-slider .slider-btn .prev,
-.site-slider .slider-btn .next{
-    background-color:var(--primary-color);
-    padding: 1rem 1.5rem;
-    border-radius:10rem;
-    color:white;
-    margin:0 1rem;
+.site-slider .slider-btn .next {
+  background-color: var(--primary-color);
+  padding: 1rem 1.5rem;
+  border-radius: 10rem;
+  color: white;
+  margin: 0 1rem;
+  opacity: 0;
+  transition: opacity 1s ease;
+  cursor: pointer;
 }
 
-.right-0{
-    right:0;
+.site-slider:hover .slider-btn .prev,
+.site-slider:hover .slider-btn .next {
+  opacity: 1;
 }
 
+.right-0 {
+  right: 0;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 1rem 0;
+  list-style-type: none;
+}
