--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,33 @@ border-radius:100%;
     form:scale(2.5);
     box-shadow:0px 3px 5px 1px rgba(0,0,0,0.205);
 }
+
+/*slider two*/
+
+.site-slider-two{
+  position:relative;
+  height:30%;
+}
+
+.site-slider-two .product{
+  height:25rem;
+  position:relative;
+  overflow:hidden;
+}
+
+.site-slider-two .product img{
+  width:90%;
+  margin:auto;
+}
+
+.site-btn.btn-span{
+  padding:0.8rem 1.9rem;
+  border-radius:4rem;
+  border:1px solid var(--border);
+  background-color:white;
+  color:var(--light-gray);
+}
+
+.slider-two .slick-track .product:hover span{
+  background-color:(--primary-color);
+}
