--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,30 @@ border-radius:100%;
 }
 
 /*third slider*/
+
+.site-slider-three{
+  position:relative;
+  margin-bottom:5rem;
+}
+
+.site-slider-three .product{
+  height:100%;
+  padding:0em;
+}
+
+.site-slider-three .cart-details{
+  margin-top:0.5rem;
+  padding:0 2rem;
+}
+
+.rating i{
+  font-size:0.7rem;
+  color:lightblue;
+}
+
+.site-slider-three .pro-price span{
+  color:var(--primary-color);
+  color:white;
+}
+
+
