finished up to advert section

--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,19 @@ border-radius:100%;
 }
 
 
+/*fourth slider*/
+.site-slider-four{
+  position:relative;
+  margin-top:3rem;
+}
+
+.slider-four{
+  padding:0 0.4rem;
+}
+
+.slider-four .product img{
+width:80%;
+border:1px solid var(--border);
+}
+
+
