--- a/css/style.css
+++ b/css/style.css
@@ -278,3 +278,28 @@ border:1px solid var(--border);
  box-shadow: 1px 1px 2px 1px var(--border);
 }
 
+.site-info{
+margin-top:10rem;
+}
+
+/*footer*/
+
+footer h4{
+  padding:4rem 1rem 0;
+  font-family:var(--roboto);
+}
+
+footer .social i{
+  padding:3% 1%;
+}
+
+footer .col-md-2 small{
+  color:var(--light-gray);
+  padding:0.7em 0;
+}
+
+footer .follow-us div{
+  width:33%;
+  height:8rem;
+  background:lightblue;
+}
