--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ border:1px solid var(--border);
 .slider-client{
   width:100%;
   height:100%;
-  background:url('../assets/item-1.jpg')
+  background:url('../assets/ban-2.png')
   /*
   background-size:cover;
   padding:8% 0;
